Complete html markup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,48 @@
 </head>
 
 <body>
+    <section>
+        <ul>
+            <li class="list active"> All</li>
+            <li class="list" data-filter="camera">Camera</li>
+            <li class="list" data-filter="headphone">Headphone</li>
+            <li class="list" data-filter="mobile">Mobile</li>
+            <li class="list" data-filter="shoe">Shoe</li>
+            <li class="list" data-filter="watch">Watch</li>
+        </ul>
 
+        <div class="products">
+            <div class="product camera"><img src="images/camera1.jpg" alt=""></div>
+            <div class="product camera"><img src="images/camera2.jpg" alt=""></div>
+            <div class="product camera"><img src="images/camera3.jpg" alt=""></div>
+
+            <div class="product headphone"><img src="images/headphone1.jpg" alt=""></div>
+            <div class="product headphone"><img src="images/headphone2.jpg" alt=""></div>
+            <div class="product headphone"><img src="images/headphone3.jpg" alt=""></div>
+            <div class="product headphone"><img src="images/headphone4.jpg" alt=""></div>
+
+            <div class="product mobile"><img src="images/mobile1.jpg" alt=""></div>
+            <div class="product mobile"><img src="images/mobile2.jpg" alt=""></div>
+            <div class="product mobile"><img src="images/mobile3.jpg" alt=""></div>
+            <div class="product mobile"><img src="images/mobile4.jpg" alt=""></div>
+
+            <div class="product shoe"><img src="images/shoe1.jpg" alt=""></div>
+            <div class="product shoe"><img src="images/shoe2.jpg" alt=""></div>
+            <div class="product shoe"><img src="images/shoe3.jpg" alt=""></div>
+            <div class="product shoe"><img src="images/shoe4.jpg" alt=""></div>
+
+            <div class="product watch"><img src="images/watch1.jpg" alt=""></div>
+            <div class="product watch"><img src="images/watch2.jpg" alt=""></div>
+            <div class="product watch"><img src="images/watch3.jpg" alt=""></div>
+            <div class="product watch"><img src="images/watch4.jpg" alt=""></div>
+
+
+
+
+
+
+        </div>
+    </section>
 
 
 </body>
