--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     $(".product").not("." + value).hide(1000);
                     $(".product").filter("." + value).show(1000);
                 }
+
+                // Solve active class
+                $(".list").click(function () {
+                    $(this).addClass("active").siblings().removeClass("active");
+                });
             });
         });
     </script>
